--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja-JP">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg">
+    <link ref="apple-touch-icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon-precomposed" type="image/svg+xml" href="/favicon.svg">
+    <meta name="apple-mobile-web-app-title" content="Kawano Yudai">
+    <title>top | oriverk.dev</title>
+    <meta name="author" content="Kawano Yudai" />
+    <meta name="description" content="Kawano Yudai's site with Vite, Preact, TypeScript, goober" />
   </head>
   <body>
     <div id="app"></div>
