add preact-helmet and seo component for <head />

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg">
-    <link ref="apple-touch-icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon-precomposed" type="image/svg+xml" href="/favicon.svg">
+    <meta name="format-detection" content="email=no,telephone=no,address=no" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/icon16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/icon32x.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/icon180x.png" />
     <meta name="apple-mobile-web-app-title" content="Kawano Yudai">
-    <title>top | oriverk.dev</title>
     <meta name="author" content="Kawano Yudai" />
-    <meta name="description" content="Kawano Yudai's site with Vite, Preact, TypeScript, goober" />
+    <meta name="theme-color" content="#00e1ee" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="Kawano Yudai">
   </head>
   <body>
     <div id="app"></div>
