modify static files: index.html and robots.txt

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="ja-JP">
+<html lang=ja-JP>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="format-detection" content="email=no,telephone=no,address=no" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/icon16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/icon32x.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/icon180x.png" />
-    <meta name="apple-mobile-web-app-title" content="Kawano Yudai">
-    <meta name="author" content="Kawano Yudai" />
-    <meta name="theme-color" content="#00e1ee" />
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:type" content="article">
-    <meta property="og:site_name" content="Kawano Yudai">
+    <meta charset=UTF-8>
+    <meta name=viewport content="width=device-width, initial-scale=1.0">
+    <meta name=format-detection content="email=no,telephone=no,address=no">
+    <link rel=icon type=image/png sizes=16x16 href=/favicon/icon16.png>
+    <link rel=icon type=image/png sizes=32x32 href=/favicon/icon32x.png>
+    <link rel=apple-touch-icon sizes=180x180 href=/favicon/icon180x.png>
+    <meta name=apple-mobile-web-app-title content="Kawano Yudai">
+    <meta name=author content="Kawano Yudai">
+    <meta name=theme-color content=#00e1ee>
+    <meta name=twitter:card content=summary_large_image>
+    <meta property=og:type content=article>
+    <meta property=og:site_name content="Kawano Yudai">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id=app></div>
+    <script type=module src=/src/main.tsx></script>
   </body>
 </html>
