migrate Preactjs to Reactjs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property=og:site_name content="Kawano Yudai">
   </head>
   <body>
-    <div id=app></div>
+    <div id=root></div>
     <script type=module src=/src/main.tsx></script>
   </body>
 </html>
